# cryptshield

./: .gitignore  LICENSE  README.md  cleanbuild.sh  guardian.sh  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
app/: commands.py  main.py
debian/: changelog  control  copyright  postinst
integrations/nemo/: README.md  decrypt.sh  encrypt.sh  remove-metadata.sh  secure-delete.sh
src/: cryptshield.py  cryptshield.sh  guardian.py  guardian.sh
src/cryptshield/: __init__.py  cryptshield.py  metadata_cleaner.py  requirements.txt
